[PSDEV-01] added get customer with pagination resource
